# libsubsys_for_luckfox_pico

./: CMakeLists.txt  libsubsys.pc.in
include/: subsys.h
source/: subsys.c
